# tracelm

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  service_a.py  service_b.py  setup.py  test_app.py  trace_55df12035a754aa080875618bc5794c3.json  trace_55df12035a754aa080875618bc5794c3_otel.json  tracelm_traces.db
.github/workflows/: publish.yml
.venv_pubtest/: pyvenv.cfg
.venv_pubtest/Scripts/: activate  activate.bat
benchmarks/: benchmark_tracing.py
docs/: ARCHITECTURE.md
tests/: test_profiler_and_cli.py
tracelm/: __init__.py  context.py  decorator.py  profiler.py  sampling.py  span.py  trace.py
tracelm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tracelm/bridges/: otel_bridge.py
tracelm/cli/: main.py  tree.py
tracelm/distributed/: tracecontext.py
tracelm/exporters/: chrome_exporter.py  otel_exporter.py
tracelm/integrations/: fastapi.py  requests.py
tracelm/storage/: sqlite_store.py
